feat: 파기 대상 선점·재시도 오케스트레이션 추가